# endophynd

./: .gitignore  CLAUDE.md  README.md  endophynd_development_plan.md  pyproject.toml  run.sh
.claude/agents/: benchmark-validator.md  bio-tool-integrator.md  gui-builder.md  reference-db-curator.md  reporting-viz.md  test-fixtures.md  workflow-engineer.md
docs/: decisions.md  methods_summary.md  session_handoff.md
docs/guides/: 01_getting_started.md  02_resolving_accessions.md  10_targeted_search.md
endophynd/: __init__.py  cache.py  cli.py  dispatch.py  diversity.py  gate.py  table.py
endophynd/classify/: __init__.py  reconcile.py
endophynd/report/: __init__.py
envs/: annotate.yml  bait.yml  base.yml  benchmark.yml  classify.yml  report.yml  retrieve.yml  retrieve_bait.yml  targeted.yml
resources/: fungal_markers.fa  its_primers.fa  rdna_ref.fa  rrna_seeds.fa  rrna_seeds_provenance.yml
results/alternaria_vs_gbi10/: .gitignore  (+5 more)
scripts/: aggregate_taxa.py  assemble_gbi_summary.py  assign_locus_blast.py  background_model.py  build_rdna_ref.py  build_rrna_seeds.py  build_unite_db.sh  classify_its_blast.py  collect_alt_hits.py  confidence_profile.py  fetch_fungal_markers.py  fpr_calibration.py  log_versions.sh  merge_hit_classification.py  parse_itsx.py  scan_one_plant.sh  shuffle_genome.py  stress_sweep.py  test_sra_streaming.sh  tiered_report.py
tests/: test_cache.py  test_classify.py  test_classify_its.py  test_dispatch.py  test_gate.py  test_gbi_scripts.py  test_rrna_seeds.py  test_target.py  test_target_more.py  test_workflow.py
workflow/: Snakefile
(+38 files in other folders)
