[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endophynd"
version = "0.1.0"
description = "Recover and classify fungal rDNA (ITS/LSU/SSU) from Logan/SRA data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
report = [
    "plotly>=5.0",
    "jinja2>=3.1",
    "biom-format>=2.1",
]
qiime = [
    "qiime2",
]

[project.scripts]
endophynd = "endophynd.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["endophynd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
